feat: InMemory DB 조회 성능 개선을 위한 복합 인덱스 추가 및 엔티티 직접 참조로 변경